<resources>
    <string name="app_name">ChaGrapp</string>
    <string name="test">test</string>

    <string name="error_audionotfound">Error: No se encontro el audio</string>

    <string name="actionbar_audios">Audios</string>
    <string name="actionbar_home">Inicio</string>
    <string name="actionbar_aboutapp">Sobre la app</string>
    <string name="actionbar_season">Season Screen!</string>

    <string name="main_button_audios">audios</string>
    <string name="main_textview_version">Versión 1.2 (beta)</string>
    <string name="main_textview_dev">Dev by ZetaxMage</string>

    <string name="menu_sort_name">Ordenar por Nombre</string>
    <string name="menu_sort_category">Ordenar por Categoria</string>
    <string name="menu_see_season">Ver Season Screen</string>
    <string name="menu_about_app">Sobre la app</string>

    <string name="season_button_mistery">boton misterioso</string>

    <string name="about_tittle_dev">Desarrollador</string>
    <string name="about_textview_devname">Fernando Orgeira (ZetaxMage)</string>
    <string name="about_textview_devmail">fernando.orgeira@gmail.com</string>
    <string name="about_tittle_aboutapp">Sobre la app</string>
    <string name="about_textview_github">github.com/ZetaxMage/ChaGrapp</string>
    <string name="about_textview_description">Proyecto disponible en GitHub únicamente para su visualización. \n\nLa carpeta \'raw\' no estará incluída en dicha versión para la seguridad de los autores de los audios.  \n\nAnte cualquier duda contactar al desarrolador.</string>
    <string name="about_tittle_changelog">Change Log</string>
    <string name="about_subtittle_v1_2">Versión 1.2: Beta Launch!</string>
    <string name="about_textview_v1_2">No hay cambios, es la primera versión abierta al publico!</string>

</resources>
